--- a/html/styles.css
+++ b/html/styles.css
@@ -34,7 +34,7 @@ h1 {
 }
 
 h1 a {
-    color: #48f451;
+    color: #2ecc71;
     text-decoration: none;
 }
 
@@ -68,4 +68,79 @@ path {
     width: 100%;
     color: white;
     text-align: left;
+}
+
+.button {
+    font-size: 14px;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    background-color: #2ecc71;
+    color: #FFF;
+    border: 1px solid transparent;
+    border-radius: 50px;
+}
+
+.button:focus,
+.button:active:focus {
+    outline: thin dotted;
+    outline: 5px auto -webkit-focus-ring-color;
+    outline-offset: -2px;
+}
+
+.button:hover,
+.button:focus {
+    text-decoration: none;
+    background-color: #555;
+}
+
+.button:active {
+    outline: 0;
+    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+    box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    input[type='range'] {
+        overflow: hidden;
+        width: 150px;
+        height: 15px;
+        -webkit-appearance: none;
+        background-color: #555;
+        border-radius: 20px;
+    }
+    input[type='range']::-webkit-slider-runnable-track {
+        height: 15px;
+        -webkit-appearance: none;
+        color: #2ecc71;
+        border-radius: 50%;
+    }
+    input[type='range']::-webkit-slider-thumb {
+        border-radius: 20px;
+        width: 15px;
+        height: 15px;
+        -webkit-appearance: none;
+        cursor: pointer;
+        background: #FFF;
+        box-shadow: -505px 0 0 500px #2ecc71;
+    }
+}
+
+input[type="range"]::-moz-range-progress {
+    background-color: #2ecc71;
+}
+
+input[type="range"]::-moz-range-track {
+    background-color: #555;
+}
+
+input[type="range"]::-ms-fill-lower {
+    background-color: #2ecc71;
+}
+
+input[type="range"]::-ms-fill-upper {
+    background-color: #2ecc71;
 }
