--- a/html/styles.css
+++ b/html/styles.css
@@ -158,3 +158,14 @@ input[type="range"]::-ms-fill-upper {
     z-index: 2;
     cursor: pointer;
 }
+
+.setting p {
+    font-family: Segoe UI;
+    color: white;
+    font-size: 14px;
+    font-weight: 100;
+    width: 100%;
+    color: white;
+    text-align: center;
+    pointer-events: none;
+}
