--- a/html/styles.css
+++ b/html/styles.css
@@ -5,7 +5,6 @@ body {
     padding: 0;
     margin: 0;
     background-color: rgb(0, 0, 0);
-    font-size: 0;
     overflow-y: hidden;
     overflow-x: hidden;
 }
@@ -68,6 +67,12 @@ path {
     width: 100%;
     color: white;
     text-align: left;
+}
+
+.songInfo {
+    left: 50px;
+    bottom: 50px;
+    position: fixed;
 }
 
 .button {
@@ -181,4 +186,44 @@ input[type="range"]::-ms-fill-upper {
     transform: translate(-50%, -50%);
     z-index: 1;
     pointer-events: none;
+}
+
+
+/*  */
+
+.tab {
+    overflow: hidden;
+    /* background-color: #f1f1f15d; */
+    text-align: center;
+}
+
+.tab button {
+    text-align: center;
+    background-color: inherit;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    color: #FFF;
+    background-color: #555;
+}
+
+.tab button:hover {
+    color: #2ecc71;
+    background-color: #ddd;
+}
+
+.tab button.active {
+    color: #FFF;
+    background-color: #2ecc71;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+    color: #2ecc71;
+    text-align: center;
 }
